Site after working through the requirements in km01, including starting the work on a new default CSS style

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -4,3 +4,9 @@ Redovisning kmom01
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+
+Ny kurs, ny redovisningstext. Detta blir för mig första gången jag jobbar med ett webbramverk. Ska därför bli spännande att se hur det fungerar i det långa loppet. Det började iallfall bra med att jag kunde fixa alla verktyg och labbmiljön. Har tidigare erfarenhet av bland annat make och git, dock är det så oregelbundet som jag har gjort något med dem så att jag ofta glömmer bort syntax och sådant, men själva grundidén har jag ganska bra koll på.
+
+När det kommer till design så är jag ganska  likgiltig. Någonstans har jag en känsla att något inte ska vara ”fult” men utöver det så vet jag inte riktigt. Tycker väl att det viktigaste är att saker är lättförståeliga och att det går att hitta i gränssnittet. Oftast brukar det hänga ihop med att man följer någon typ av konvention, så på det sättet är jag väl övertygad om att somliga saker ska vara på ett visst sätt. Exempel är väl navigeringsbar i toppen på varje sida. 
+
+Lyckades få några grundgrejer att funka i CSS, så kunde absolut ha gått sämre. Däremot tycker jag alltid att det är något som man vill göra, ofta väldigt specifikt, som jag inte lyckas fixa på något rättfram sätt. I detta fall var det att ”centrera” allt innehåll, eller se till att det inte är längst till vänster på stora skärmar. Detta borde vara enkelt men jag kan inte komma på direkt hur man gör, och hittar inte precis det som jag vill när jag söker på nätet. Tycker att jag har relativt bra grepp på grunderna i CSS men är ofta någon sådan här grej som gäckar en. Annars var den största ”aha” upplevelsen för mig denna gång hur ramverket förenklar arbetet med en webbsida. Med markdown är det i princip möjligt att låta icke-tekniskt invigda skriva innehåll till sidan på direkten, vilket kan tänka mig är en stor fördel.
