Commit for kmom02, which included a new theme made with LESS

--- a/content/redovisning/02_kmom02.md
+++ b/content/redovisning/02_kmom02.md
@@ -4,3 +4,13 @@ Redovisning kmom02
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/02_kmom02.md`.
+
+För mig innebär LESS en stor förbättringar beträffande arbete med CSS, inte bara utifrån vad man kan göra men även att ”arbetsglädjen” blir större. Saker som är lite irriterande med CSS verkar bli mindre så när man använder LESS. Uppdelandet i moduler gör dessutom att det känns mer som annan programmering, och det blir en mer logisk samt tydlig uppdelning av olika delar i designen.
+
+Jag har vid ett fåtal tillfällen byggt mjukvara från ”grunden” för Linux (när saker inte har funnits för exempelvis Solus). Vid alla dessa tillfällen tror jag att det har varit en make fil som man använder (om man bortser från de som har vanliga installationsskript). Överlag tycker jag det är behändigt, eftersom det går att göra saker genom att följa förenklade beskrivningar jämfört med att göra allting från start själv.
+
+För mig är det oftast tydligt vad för fördelar kompilering medför. Främst tycker jag om att kompileringsprocessen kan hitta fel, så man slipper stöta på dem senare i produktion. I detta fall innebär det att man får fel istället för att CSS regeln exempelvis inte gör något för att den är defekt (och att man får felsöka lite överallt).
+
+Har inte haft något speciell tanke när jag har designat mitt tema. Har försökt att hålla det enkelt och förutsägbart. Tänkte dock att jag vill ha det så att det var enkelt att bygga vidare, dvs inga detaljer som hänger mycket på hur någon annan sak ser ut eller beter sig. Färgmässigt har jag hållit mig till dämpade färger eftersom jag tycker det fungerar bättre på flera olika enheter (med mer eller mindre bra skärmar).
+
+Det som kanske var den största uppenbarelsen för mig detta moment var nog hur mycket enklare det måste vara att jobba med en CSS preprocessor när man jobbar med stora projekt och designer. Nästan så att jag har svårt att förstå hur det är praktiskt gångbart att enbart köra ”vanliga” CSS vid stora webbplatser sidor som har många sidor. 
